hphp/test/slow/sealed/sealed_classes2.php.expectf
Fatal error: Class SomeOtherOtherClass may not inherit from sealed class (SomeSealedClass) without being in the whitelist in %s/sealed_classes2.php on line 8
